--- a/troubleshooting-1.Rmd
+++ b/troubleshooting-1.Rmd
@@ -24,7 +24,7 @@ Now, let's load the `tidyverse` (meta-) package:
 
 ```{r, error = TRUE}
 ## ERROR 2 ##
-libraries(tidyverse)
+library(tidyverse)
 ```
 
 By loading the tidyverse, a function called `glimpse` has been made available. This function is useful for viewing a data set. Let's take a look at the `mtcars` dataset by applying the `glimpse` function to `mtcars`!
