--- a/troubleshooting-1.Rmd
+++ b/troubleshooting-1.Rmd
@@ -31,7 +31,7 @@ By loading the tidyverse, a function called `glimpse` has been made available. T
 
 ```{r, error = TRUE}
 ## ERROR 3 ##
-glimpse mtcars
+glimpse(mtcars)
 ```
 
 ## Attribution
