--- a/troubleshooting-2.Rmd
+++ b/troubleshooting-2.Rmd
@@ -69,7 +69,7 @@ While filtering for *all movies that do not belong to the genre drama* above, I 
 ### ERROR HERE ###
 movieLens %>%
   filter(!genres == "Drama") %>%
-  select(title, genres, year, rating, timestamp)
+  select(title, genres, everything())
 ```
 
 ## Exercise 2: Calculating with `mutate()`-like functions
@@ -79,15 +79,15 @@ Some of the variables in the `movieLens` dataset are in *camelCase* (in fact, *m
 ```{r}
 ### ERROR HERE ###
 movieLens <- movieLens %>%
-  rename(user_id == userId,
-         movie_id == movieId)
+  rename(userId = user_id,
+        movieId = movie_id)
 ```
 
 As you already know, `mutate()` defines and inserts new variables into a tibble. There is *another mystery function similar to `mutate()`* that adds the new variable, but also drops existing ones. I wanted to create an `average_rating` column that takes the `mean(rating)` across all entries, and I only want to see that variable (i.e drop all others!) but I forgot what that mystery function is. Can you remember?
 
 ```{r}
 ### ERROR HERE ### 
-mutate(movieLens,
+summarise(movieLens,
        average_rating = mean(rating))
 ```
 
